|
Quick Lists
|
|
Bug ID:
|
6680665
|
|
Votes
|
0
|
|
Synopsis
|
bytecode Escape Analyzer produces incorrect escape information for methods without oop arguments
|
|
Category
|
hotspot:compiler2
|
|
Reported Against
|
|
|
Release Fixed
|
hs12(b02)
|
|
State
|
10-Fix Delivered,
bug
|
|
Priority:
|
4-Low
|
|
Related Bugs
|
|
|
Submit Date
|
26-MAR-2008
|
|
Description
|
Bytecode Escape Analyzer produces incorrect escape information for methods
without oop arguments since it do not analyse such methods.
For such methods which return an customer bcEscapeAnalyzer
always says that it return a new non-escaping allocated customer since
it is default escape information for a method before bytecode analysis.
In the failed test cases the methods are accessors for static fields oop
(which global escape). And the caller method synchronizing on this field.
But locks were removed since EA says it is not escaping.
Failed nsk methods:
nsk/monitoring/ThreadInfo/getLockName/getlockname001
nsk/monitoring/stress/thread/cmon001
nsk/jdwp/StackFrame/GetValues/getvalues001
nsk/jdwp/StackFrame/SetValues/setvalues001
nsk/jdwp/StackFrame/ThisObject/thisobject001
nsk/jdwp/ThreadReference/CurrentContendedMonitor/curcontmonitor001
nsk/jdwp/ThreadReference/Interrupt/interrupt001
nsk/jdwp/ThreadReference/Name/name001
nsk/jdwp/ThreadReference/OwnedMonitors/ownmonitors001
nsk/jdwp/ThreadReference/Resume/resume001
nsk/jdwp/ThreadReference/Status/status001
nsk/jdwp/ThreadReference/Stop/stop001
nsk/jdwp/ThreadReference/Suspend/suspend001
nsk/jdwp/ThreadReference/SuspendCount/suspendcnt001
Posted Date : 2008-03-26 23:59:55.0
|
|
Work Around
|
N/A
|
|
Evaluation
|
See Description.
Posted Date : 2008-03-27 00:01:26.0
|
|
Comments
|
PLEASE NOTE: JDK6 is formerly known as Project Mustang
|
|
|
 |