6680665: bytecode Escape Analyzer produces incorrect escape information for methods without oop arguments

BcEscapeAnalyzer does not analyze methods with no oop arguments.

Reviewed-by: rasbold